--- a/Archivos/2CSS/navbar.css
+++ b/Archivos/2CSS/navbar.css
@@ -17,6 +17,15 @@ nav{
     justify-content: space-around;
 
 }
+.nav-boton{
+    background: salmon;
+    color: #fff;
+    padding: 10px 0px;
+    border: 2px solid #fff;
+    display: none;
+}
+
+
 
 @media (max-width: 600px) {
     nav{ 
@@ -25,5 +34,11 @@ nav{
     }
     .nav-enlace{
         margin: 10px 0px;
+    }
+    .nav-boton{
+        display: inline-block
+    }
+    .desaparece{
+        display: none;
     }
 }
